rust/oneapi-rs/src/sycl/sys/mod.rs

//===----------------------------------------------------------------------===//
//
// Part of the LLVM Project, under the Apache License v2.0 with LLVM Exceptions.
// See https://llvm.org/LICENSE.txt for license information.
// SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception
//
//===----------------------------------------------------------------------===//

/* automatically generated by rust-bindgen 0.71.1 */

#![allow(non_camel_case_types)]
#![allow(non_snake_case)]
#![allow(non_upper_case_globals)]
#![allow(dead_code)]

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct sycl_rs_device_t {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct sycl_rs_context_t {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct sycl_rs_queue_t {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct sycl_rs_event_t {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct sycl_rs_program_t {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct sycl_rs_kernel_t {
    _unused: [u8; 0],
}
#[repr(u32)]
#[derive(Debug, Copy, Clone, Hash, PartialEq, Eq)]
pub enum sycl_rs_result_t {
    SYCL_RS_RESULT_SUCCESS = 0,
    SYCL_RS_RESULT_INVALID_ARGUMENT = 1,
    SYCL_RS_RESULT_OUT_OF_MEMORY = 2,
    SYCL_RS_RESULT_RUNTIME_ERROR = 3,
}
#[repr(u32)]
#[derive(Debug, Copy, Clone, Hash, PartialEq, Eq)]
pub enum sycl_rs_alloc_kind_t {
    SYCL_RS_ALLOC_KIND_DEVICE = 0,
    SYCL_RS_ALLOC_KIND_SHARED = 1,
    SYCL_RS_ALLOC_KIND_HOST = 2,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct sycl_rs_raw_kernel_arg_t {
    pub data: *const ::core::ffi::c_void,
    pub size: usize,
}
unsafe extern "C" {
    pub fn sycl_rs_last_error_message() -> *const ::core::ffi::c_char;
}
unsafe extern "C" {
    pub fn sycl_rs_device_count(out_count: *mut usize) -> sycl_rs_result_t;
}
unsafe extern "C" {
    pub fn sycl_rs_device_create_with_index(
        index: usize,
        out_device: *mut *mut sycl_rs_device_t,
    ) -> sycl_rs_result_t;
}
unsafe extern "C" {
    pub fn sycl_rs_device_create_default(
        out_device: *mut *mut sycl_rs_device_t,
    ) -> sycl_rs_result_t;
}
unsafe extern "C" {
    pub fn sycl_rs_device_destroy(device: *mut sycl_rs_device_t);
}
unsafe extern "C" {
    pub fn sycl_rs_context_create(
        device: *const sycl_rs_device_t,
        out_context: *mut *mut sycl_rs_context_t,
    ) -> sycl_rs_result_t;
}
unsafe extern "C" {
    pub fn sycl_rs_context_destroy(context: *mut sycl_rs_context_t);
}
unsafe extern "C" {
    pub fn sycl_rs_queue_create(
        context: *const sycl_rs_context_t,
        device: *const sycl_rs_device_t,
        out_queue: *mut *mut sycl_rs_queue_t,
    ) -> sycl_rs_result_t;
}
unsafe extern "C" {
    pub fn sycl_rs_queue_destroy(queue: *mut sycl_rs_queue_t);
}
unsafe extern "C" {
    pub fn sycl_rs_event_destroy(event: *mut sycl_rs_event_t);
}
unsafe extern "C" {
    pub fn sycl_rs_event_wait(event: *const sycl_rs_event_t) -> sycl_rs_result_t;
}
unsafe extern "C" {
    pub fn sycl_rs_alloc(
        queue: *mut sycl_rs_queue_t,
        kind: sycl_rs_alloc_kind_t,
        bytes: usize,
        alignment: usize,
        out_ptr: *mut *mut ::core::ffi::c_void,
    ) -> sycl_rs_result_t;
}
unsafe extern "C" {
    pub fn sycl_rs_free(
        queue: *mut sycl_rs_queue_t,
        ptr: *mut ::core::ffi::c_void,
    ) -> sycl_rs_result_t;
}
unsafe extern "C" {
    pub fn sycl_rs_memcpy(
        queue: *mut sycl_rs_queue_t,
        dst: *mut ::core::ffi::c_void,
        src: *const ::core::ffi::c_void,
        bytes: usize,
    ) -> sycl_rs_result_t;
}
unsafe extern "C" {
    pub fn sycl_rs_memcpy_async(
        queue: *mut sycl_rs_queue_t,
        dst: *mut ::core::ffi::c_void,
        src: *const ::core::ffi::c_void,
        bytes: usize,
        out_event: *mut *mut sycl_rs_event_t,
    ) -> sycl_rs_result_t;
}
unsafe extern "C" {
    pub fn sycl_rs_queue_wait(queue: *mut sycl_rs_queue_t) -> sycl_rs_result_t;
}
unsafe extern "C" {
    pub fn sycl_rs_program_build_from_source(
        context: *const sycl_rs_context_t,
        device: *const sycl_rs_device_t,
        source: *const ::core::ffi::c_char,
        source_len: usize,
        build_options: *const ::core::ffi::c_char,
        out_program: *mut *mut sycl_rs_program_t,
    ) -> sycl_rs_result_t;
}
unsafe extern "C" {
    pub fn sycl_rs_program_last_log(
        program: *const sycl_rs_program_t,
    ) -> *const ::core::ffi::c_char;
}
unsafe extern "C" {
    pub fn sycl_rs_program_destroy(program: *mut sycl_rs_program_t);
}
unsafe extern "C" {
    pub fn sycl_rs_program_get_kernel(
        program: *const sycl_rs_program_t,
        kernel_name: *const ::core::ffi::c_char,
        out_kernel: *mut *mut sycl_rs_kernel_t,
    ) -> sycl_rs_result_t;
}
unsafe extern "C" {
    pub fn sycl_rs_kernel_destroy(kernel: *mut sycl_rs_kernel_t);
}
unsafe extern "C" {
    pub fn sycl_rs_kernel_launch_1d(
        queue: *mut sycl_rs_queue_t,
        kernel: *const sycl_rs_kernel_t,
        global_range: usize,
        local_range: usize,
        args: *const sycl_rs_raw_kernel_arg_t,
        num_args: usize,
    ) -> sycl_rs_result_t;
}
